--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "ts-node": "ts-node",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "typeorm:migrate": "npm run typeorm migration:generate -- -n",
+    "migration:generate": "npm run typeorm migration:generate -- -n",
     "typeorm:run": "npm run typeorm migrations:run"
   },
   "author": "",
