--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.2.1",
+    "tsc": "^2.0.3",
     "typeorm": "^0.2.37"
   }
 }
