--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,21 @@
 {
-    "compilerOptions": {
-      "lib": ["es5", "es6", "dom"],
-      "target": "es2017",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true
-    },
-    "include": ["src/**/*"],
-    "rootDir": "./src",
-    "outDir": "./build",
-  }
+  "compilerOptions": {
+    "lib": [
+      "es5",
+      "es6",
+      "dom"
+    ],
+    "target": "es2017",
+    "module": "commonjs",
+    // "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "rootDir": "./src",
+  "outDir": "./build",
+}
